# Server

GateServer/: .gitignore  AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MySqlDao.cpp  MySqlDao.h  MySqlMgr.cpp  MySqlMgr.h  MySqlPool.cpp  MySqlPool.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  message.pb.cc  message.pb.h  message.proto
GateServer/.cache/clangd/index/: CServer.cpp.7D6B996162885581.idx  CServer.h.D829E1C3E65D85EA.idx  ConfigMgr.cpp.5ADEE7750A483DF4.idx  ConfigMgr.h.090A705BB9E95A0A.idx  GateServer.cpp.2588818488A6AD5C.idx  HttpConnection.cpp.C03DEFA117A150F4.idx  HttpConnection.h.C19A997A72D0F643.idx  LogicSystem.cpp.29840BBCBB6BF4C3.idx  LogicSystem.h.56AA52867A76A25C.idx  Singleton.h.0A84A499E33E07CB.idx  VerifyGrpcClient.cpp.EE3FF76F810FC5AD.idx  VerifyGrpcClient.h.49B7DF7629D6E75E.idx  const.h.967714C0FC8C9BCA.idx  message.grpc.pb.cc.C9C58E4B527F8221.idx  message.grpc.pb.h.28E651B64282A9E2.idx  message.pb.cc.B905A610A466371C.idx  message.pb.h.CA29BB09979E5525.idx
VerifyServer/: config.js  config.json  email.js  package-lock.json  package.json  proto.js  server.js
